# privado-vpn-linux

./: .gitignore  COPYING.additional  Cargo.toml  DCO  NOTICE  README.md
mcp/privado-vpn-mcp/: Cargo.toml
mcp/privado-vpn-mcp/src/: main.rs
mcp/privado-vpn-rag-mcp/: Cargo.toml
mcp/privado-vpn-rag-mcp/src/: main.rs
scripts/: vpn-launch.sh
src/: api.rs  client.rs  config.rs  main.rs  routing.rs
src/daemon/: extra_handlers.rs  guardian.rs  http_api.rs  mod.rs  openvpn.rs  portal_api.rs  proto.rs  routing_rules.rs  server.rs  state.rs  swanctl.rs  trusted_networks.rs  wireguard.rs
systemd/: restart-limits.conf
ui/: package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/scripts/: postinst.sh  privado-vpn.desktop
ui/src-tauri/src/: commands.rs  helper.rs  lib.rs  main.rs
ui/src/lib/: tauri.ts
ui/src/lib/components/: AccountScreen.svelte  BreachMonitor.svelte  ConnectScreen.svelte  ConnectionHistory.svelte  ControlTower.svelte  DiagnosticsScreen.svelte  NotificationsScreen.svelte  PhantomMode.svelte  RoutingScreen.svelte  SecurityScanner.svelte  ServerList.svelte  SettingsScreen.svelte  SignupScreen.svelte  SpeedTest.svelte  Toast.svelte
ui/src/routes/: +page.svelte
