[package]
name = "privado-vpn"
version = "2.0.0"
edition = "2021"
description = "PrivadoVPN — native Linux VPN client (CLI + systemd daemon)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/eagle10162026/privado-vpn-linux"
keywords = ["vpn", "privado", "ikev2", "ipsec", "linux"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "privado-vpn"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "gzip", "deflate", "brotli"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"

[profile.release]
opt-level = 3
strip = true
lto = true
