[package]
name = "privado-vpn-mcp"
version = "1.0.0"
edition = "2021"
description = "MCP tool server for PrivadoVPN — gives LLMs full VPN system control"

[[bin]]
name = "privado-vpn-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
strip = true
lto = true
