[package]
name = "privado-vpn-rag-mcp"
version = "1.0.0"
edition = "2021"
description = "MCP RAG server for PrivadoVPN — indexes logs, config, docs for LLM retrieval"

[[bin]]
name = "privado-vpn-rag-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
strip = true
lto = true
