[package]
name = "privado-vpn-ui"
version = "2.0.0"
description = "PrivadoVPN — Native Linux VPN Client (Desktop GUI)"
authors = ["Joe Aguero"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "privado_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "deflate", "brotli"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "6"
